# NixManager

./: CMakeLists.txt  README.md  TODO.md  clickable.yaml  main.cpp  manifest.json.in  nixmanager.apparmor  nixmanager.desktop.in  snapcraft.yaml
plugins/: CMakeLists.txt
plugins/NixManager/: CMakeLists.txt  NixManager-Docs.md  controller.cpp  controller.h  nix-setup.cpp  nix-setup.h  plugin.cpp  plugin.h  qmldir  worker-logic.cpp  worker-logic.h  worker.cpp  worker.h
plugins/NixManager/libs/: openprocess.cpp  openprocess.h
plugins/NixManager/nix-layer/: backup-config.cpp  backup-config.h  nix-config.cpp  nix-config.h  nix-interact.cpp  nix-interact.h  nix-wrapper.cpp  nix-wrapper.h  nixhub-api.cpp  nixhub-api.h
po/: nixmanager.chromiumos-guy.pot
qml/: About.qml  Advanced_Settings.qml  Apply_changes.qml  Channels.qml  Generations.qml  Installed_packages.qml  Main.qml  Setup.qml  UnitTests.qml  qml.qrc
